# vantagepoint

./: .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt
api/: server.py
core/: chain.py  doorway_client.py  expedition.py  llm_client.py  mode.py  paths.py  provocation.py  receipt.py  session.py  vantage.py
examples/: run_session.py
tests/: test_api.py  test_expedition.py  test_modes.py  test_paths.py  test_provocation.py  test_receipt.py  test_session.py  test_vantage.py
