[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vantagepoint"
version = "0.1.0"
authors = [{name = "Luke H"}]
maintainers = [{name = "Doorway"}]
description = "Structured thinking methodology as infrastructure. Five phases. Works standalone, with an LLM, or with the Doorway AGI engine."
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic",
    "httpx",
    "xycore",
    "pruv",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://doorwayagi.com"
Repository = "https://github.com/doorwayagi/vantagepoint"

[project.scripts]
vantagepoint = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
