[build-system]
requires = ["setuptools>=68.0,<75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantagepoint"
version = "0.1.0"
authors = [{name = "Luke H"}]
maintainers = [{name = "Doorway"}]
description = "Structured thinking methodology as infrastructure. Five phases. Works standalone, with an LLM, or with the Doorway AGI engine."
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic",
    "httpx",
    "xycore",
    "pruv",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://doorwayagi.com"
Repository = "https://github.com/doorwayagi/vantagepoint"

[project.scripts]
vantagepoint = "cli:main"

[tool.setuptools]
py-modules = ["main", "cli"]

[tool.setuptools.packages.find]
include = ["core*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
